--- a/.github/workflows/core-services-deploy-dev.yaml
+++ b/.github/workflows/core-services-deploy-dev.yaml
@@ -5,7 +5,11 @@ on:
   pull_request:
     types: [closed]
     branches: [main]
-    paths: "core-services/clinic-service/**"
+    paths:
+      - "core-services/clinic-service/**"
+      - "core-services/lambda-authoriser/**"
+  push:
+    branches: [feature/TBBETA-490]
 
 jobs:
   clinic-service:
