--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -13,6 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
 
+    strategy:
+      matrix:
+        service:
+          - name: clinic-service
+            build-file: .build/*
+          - name: lamdba-authoriser
+            build-file: src/*
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -21,78 +29,89 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
+      - name: Paths filter
+        uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            clinic-service:
+              - "core-services/clinic-service/**"
+            lambda-authoriser:
+              - "core-services/clinic-service/**"
+
       - name: Install dependencies
-        run: yarn workspace clinic-service install
-        working-directory: core-services/clinic-service
-
-      - name: Build clinic service
-        working-directory: core-services/clinic-service
+        if: ${{ matrix.service.name }} != lambda-authoriser
+        run: yarn workspace ${{ matrix.service.name }} install
+        working-directory: core-services/${{ matrix.service.name }}
+      - name: Build service
+        working-directory: core-services/${{ matrix.service.name }}
         run: yarn run build
-      - name: Create lambda zip
-        run: zip -r clinic-service-lambda.zip .build/*
-        working-directory: core-services/clinic-service
-      - name: Create lambda authoriser zip
-        run: zip -r lambda-authoriser.zip src/*
-        working-directory: core-services/lambda-authoriser
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: "eu-west-2"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
-          role-session-name: PETS-Clinic-Service-Deploy
-      - name: Get secrets from AWS
-        uses: aws-actions/aws-secretsmanager-get-secrets@v2
-        with:
-          secret-ids: |
-            ClinicServiceDeploy
-            Clinic_Service_URIs
-            LambdaAuthoriserDeploy
-          parse-json-secrets: true
+      - name: Create zip
+        run: zip -r ${{ matrix.service.name }}.zip ${{ matrix.service.build-file }}
+        working-directory: core-services/${{ matrix.service.name }}
+      # - name: Create lambda authoriser zip
+      #   run: zip -r lambda-authoriser.zip src/*
+      #   working-directory: core-services/lambda-authoriser
 
-      - name: Upload Clinic Service to S3
-        working-directory: core-services/clinic-service
-        run: aws s3 cp clinic-service-lambda.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
-      - name: Upload Lambda Authoriser to S3
-        working-directory: core-services/lambda-authoriser
-        run: aws s3 cp lambda-authoriser.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v4
+      #   with:
+      #     aws-region: "eu-west-2"
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
+      #     role-session-name: PETS-Clinic-Service-Deploy
+      # - name: Get secrets from AWS
+      #   uses: aws-actions/aws-secretsmanager-get-secrets@v2
+      #   with:
+      #     secret-ids: |
+      #       ClinicServiceDeploy
+      #       Clinic_Service_URIs
+      #       LambdaAuthoriserDeploy
+      #     parse-json-secrets: true
 
-      - name: Process Swagger file
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
-            addIntegrationsToSwagger()
-      - name: Upload Swagger file to S3
-        run: aws s3 cp swagger.json s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      # - name: Upload Clinic Service to S3
+      #   working-directory: core-services/clinic-service
+      #   run: aws s3 cp clinic-service-lambda.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      # - name: Upload Lambda Authoriser to S3
+      #   working-directory: core-services/lambda-authoriser
+      #   run: aws s3 cp lambda-authoriser.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
 
-      - name: Create package.json file including only non-dev dependencies
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const createPackageDotJson = require('./.github/scripts/create-package-dot-json.js')
-            createPackageDotJson('clinic-service')
-            createPackageDotJson('lambda-authoriser')
-      - name: Clinic Service - Run yarn in nodejs folder
-        working-directory: node-zip/clinic-service/nodejs
-        run: yarn
-      - name: Clinic Service - Create nodejs zip file
-        working-directory: node-zip/clinic-service
-        run: zip -r nodejs.zip nodejs
-      - name: Clinic Service - Upload nodejs zip file to S3
-        working-directory: node-zip/clinic-service
-        run: aws s3 cp nodejs.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
-      - name: Lambda Authoriser - Run yarn in nodejs folder
-        working-directory: node-zip/lambda-authoriser/nodejs
-        run: yarn
-      - name: Lambda Authoriser - Create nodejs zip file
-        working-directory: node-zip/lambda-authoriser
-        run: zip -r nodejs.zip nodejs
-      - name: Lambda Authoriser - Upload nodejs zip file to S3
-        working-directory: node-zip/lambda-authoriser
-        run: aws s3 cp nodejs.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
+      # - name: Process Swagger file
+      #   uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       const addIntegrationsToSwagger = require('./.github/scripts/add-integrations-to-swagger.js')
+      #       addIntegrationsToSwagger()
+      # - name: Upload Swagger file to S3
+      #   run: aws s3 cp swagger.json s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
 
-      - name: Update clinic service lambda code
-        run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:clinic-service-lambda --s3-bucket $CLINICSERVICEDEPLOY_BUCKET_NAME --s3-key clinic-service-lambda.zip
+      # - name: Create package.json file including only non-dev dependencies
+      #   uses: actions/github-script@v7
+      #   with:
+      #     script: |
+      #       const createPackageDotJson = require('./.github/scripts/create-package-dot-json.js')
+      #       createPackageDotJson('clinic-service')
+      #       createPackageDotJson('lambda-authoriser')
+      # - name: Clinic Service - Run yarn in nodejs folder
+      #   working-directory: node-zip/clinic-service/nodejs
+      #   run: yarn
+      # - name: Clinic Service - Create nodejs zip file
+      #   working-directory: node-zip/clinic-service
+      #   run: zip -r nodejs.zip nodejs
+      # - name: Clinic Service - Upload nodejs zip file to S3
+      #   working-directory: node-zip/clinic-service
+      #   run: aws s3 cp nodejs.zip s3://$CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $CLINICSERVICEDEPLOY_SSE_KEY
+      # - name: Lambda Authoriser - Run yarn in nodejs folder
+      #   working-directory: node-zip/lambda-authoriser/nodejs
+      #   run: yarn
+      # - name: Lambda Authoriser - Create nodejs zip file
+      #   working-directory: node-zip/lambda-authoriser
+      #   run: zip -r nodejs.zip nodejs
+      # - name: Lambda Authoriser - Upload nodejs zip file to S3
+      #   working-directory: node-zip/lambda-authoriser
+      #   run: aws s3 cp nodejs.zip s3://$LAMBDAAUTHORISERDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $LAMBDAAUTHORISERDEPLOY_SSE_KEY
+
+      # - name: Update clinic service lambda code
+      #   run: aws lambda update-function-code --function-name arn:aws:lambda:eu-west-2:${{ secrets.AWS_ACCOUNT_ID }}:function:clinic-service-lambda --s3-bucket $CLINICSERVICEDEPLOY_BUCKET_NAME --s3-key clinic-service-lambda.zip
