--- a/.github/workflows/core-services-deploy.yaml
+++ b/.github/workflows/core-services-deploy.yaml
@@ -31,22 +31,6 @@ jobs:
               - "core-services/clinic-service/**"
             lambda-authoriser:
               - "core-services/lambda-authoriser/**"
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          mask-aws-account-id: true
-          aws-region: "eu-west-2"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CORE_SERVICES_ROLE_NAME }}"
-          role-session-name: PETS-Core-Services-Deploy
-      - name: Get secrets from AWS
-        uses: aws-actions/aws-secretsmanager-get-secrets@v2
-        with:
-          secret-ids: |
-            CoreServicesDeploy
-            CoreServicesURIs
-          parse-json-secrets: true
       - name: Create matrix
         uses: actions/github-script@v7
         id: create-matrix
@@ -59,12 +43,12 @@ jobs:
         run: echo "matrix=${{ steps.filter.outputs.changes }}" >> "$GITHUB_OUTPUT"
         #run: echo "matrix=${{ steps.create-matrix.outputs.result }}" >> "$GITHUB_OUTPUT"
 
-  # print-matrix:
-  #   runs-on: ubuntu-latest
-  #   needs: matrix
-  #   steps:
-  #     - run: echo "${{ needs.matrix.outputs.matrix }}"
-  #     - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
+  print-matrix:
+    runs-on: ubuntu-latest
+    needs: matrix
+    steps:
+      - run: echo "${{ needs.matrix.outputs.matrix }}"
+      - run: echo "${{ fromJSON(needs.matrix.outputs.matrix) }}"
 
   deploy:
     name: Build, package & deploy services
@@ -74,25 +58,7 @@ jobs:
 
     strategy:
       matrix:
-        service: ${{ fromJSON(needs.matrix.outputs.matrix) }}
-        # - name: applicant-service
-        #   zip-file: applicant-service-lambda.zip
-        #   build-folder: .build/*
-        #   bucket-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_BUCKET_NAME
-        #   sse-key-secret: $CORESERVICESDEPLOY_APPLICANT_SERVICE_SSE_KEY
-        #   lambda: applicant-service-lambda
-        # - name: clinic-service
-        #   zip-file: clinic-service-lambda.zip
-        #   build-folder: .build/*
-        #   bucket-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_BUCKET_NAME
-        #   sse-key-secret: $CORESERVICESDEPLOY_CLINIC_SERVICE_SSE_KEY
-        #   lambda: clinic-service-lambda
-        # - name: lambda-authoriser
-        #   zip-file: lambda-authoriser.zip
-        #   build-folder: src/*
-        #   bucket-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_BUCKET_NAME
-        #   sse-key-secret: $CORESERVICESDEPLOY_LAMBDA_AUTHORISER_SSE_KEY
-        #   lambda: api-gateway-authoriser
+        service: ${{ needs.matrix.outputs.matrix }}
 
     steps:
       - name: Checkout code
@@ -102,17 +68,6 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
-      # - name: Paths filter
-      #   uses: dorny/paths-filter@v3
-      #   id: changes
-      #   with:
-      #     filters: |
-      #       applicant-service:
-      #         - "core-services/applicant-service/**"
-      #       clinic-service:
-      #         - "core-services/clinic-service/**"
-      #       lambda-authoriser:
-      #         - "core-services/lambda-authoriser/**"
 
       - name: Install dependencies
         if: ${{ matrix.service.name != 'lambda-authoriser' }}
