--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "private": "true",
   "name": "pets-monorepo",
   "version": "1.0.0",
+  "main": "index.js",
+  "author": "PETS Engineering",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "security-checks": "git secrets --scan",
@@ -9,11 +11,10 @@
     "start": "node scripts/start.mjs",
     "pull:secrets": "node scripts/pull-secrets.mjs",
     "start:ui": "pnpm --filter pets-ui dev",
-    "watch:lambda-logs": "node scripts/watch-docker-logs.mjs"
+    "watch:lambda-logs": "node scripts/watch-docker-logs.mjs",
+    "notify:teams": "node scripts/team-notification.mjs"
   },
-  "main": "index.js",
   "repository": "git@github.com:UKHSA-Internal/pre-entry-tb-screening-app.git",
-  "author": "PETS Engineering",
   "license": "MIT",
   "devDependencies": {
     "@aws-sdk/client-secrets-manager": "^3.758.0",
