--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,32 @@ on:
         required: true
 
 jobs:
+  Higher-Env-Notification:
+    if: contains('prod preprod', inputs.environment)
+    name: Notify team on deployment to higher environments
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Notify Teams Chat
+        run: |
+          pnpm notify:teams '${{ secrets.TECH_TEAM_CHAT }}' '⌛️${{ github.actor }} has just triggered App deployment to ${{ inputs.environment }}.'
+
   load-deployment-config:
     name: Load deployment config for Core Services Lambda
     runs-on: ubuntu-latest
@@ -295,6 +321,28 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm i
+
+      - name: Notify Teams Chat(Dev and QAT)
+        if: contains('dev qat', inputs.environment)
+        run: |
+          pnpm notify:teams '${{ secrets.APP_DEPLOYMENT_NOTIFICATION_CHAT }}' '${{ github.ref_name }} has been deployed to ${{ inputs.environment }}'
+
+      - name: Notify Teams Chat(Preprod and Prod)
+        if: contains('prod preprod', inputs.environment)
+        run: |
+          pnpm notify:teams '${{ secrets.TECH_TEAM_CHAT }}' '🚀 App deployment to ${{ inputs.environment }} ran successfully'
+
       - name: Get Pull Request Number
         id: get_pr
         run: |
@@ -312,7 +360,7 @@ jobs:
             issue_number: ${{ env.PR_NUMBER }},
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: `🚀 Pull Request ${{ env.PR_NUMBER }} deployed to ${{ inputs.environment }} 
+            body: `🚀 Pull Request ${{ env.PR_NUMBER }} deployed to ${{ inputs.environment }}
 
               - React app: ${{ vars.APP_DOMAIN }}
               - API Docs: ${{ vars.APP_DOMAIN }}/api-docs
